fixed logged in / logged out visibility

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,3 +13,8 @@
 .navbar-brand {
   color: $primary;
 }
+
+.show-when-logged-in,
+.show-when-logged-out {
+  display: none;
+}
